--- a/focus.html
+++ b/focus.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=992px, initial-scale=1">
 
-    <title>台灣國際水週 | 循環/再生/智慧水科技</title>
+    <title>台灣國際水週 | 運輸/淨水/水資源永續</title>
+
     <link rel="icon" type="image/png"
         href="https://storage.googleapis.com/www.taiwantradeshow.com.tw/ttsShow/202006/T-43764669.png" />
     <!-- css -->
@@ -20,37 +21,42 @@
         <!-- header -->
         <header class="header">
             <div class="container">
-                <!-- header__top -->
-                <div class="header__top">
-                    <h1 class="header__logo">
-                        <a href="index.html">
-                            <img src="./img/logo_tiww_h.png" alt="台灣國際水週" />
-                        </a>
-                    </h1>
-                    <div class="header__tools">
-                        <a href="//www.facebook.com/taiwanwatershow/" title="Facebook"><img
-                                src="./img/btn_fb.png" /></a>
-                        <a href="//twitter.com/TaiwanWeek" title="Twitter"><img src="./img/btn_twitter.png" /></a>
-                        <a href="//www.linkedin.com/company/31086045/admin/" title="Linkedin"><img
-                                src="./img/btn_linkedin.png" /></a>
-                        <a href="index-en.html" title="English" class="d-none"><img src="./img/btn_lan.png" /></a>
-                    </div>
-                </div>
+                <dvi class="row">
+                    <div class="col-4 header__left">
+                        <h1 class="header__logo">
+                            <a href="index.html">
+                                <img src="./img/tiww_logo.png" class="img-fluid" alt="台灣國際水週" />
+                            </a>
+                        </h1>
 
-                <!-- nav -->
-                <ul class="header__nav nav">
-                    <li class="nav-item"> 電子報 Vol. 01 </li>
-                    <li class="nav-item"><a class="nav-link" href="//www.taiwanintlwaterweek.com/" title="官網">官網</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link"
-                            href="//www.taiwanintlwaterweek.com/zh-tw/menu/1374A7912D94FD49D0636733C6861689/info.html"
-                            title="各期電子報">各期電子報</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html" title="首頁">首頁</a></li>
-                    <li class="nav-item"><a class="nav-link" href="info.html" title="展覽訊息">展覽訊息</a></li>
-                    <li class="nav-item"><a class="nav-link" href="topic.html" title="專題報導">專題報導</a></li>
-                    <li class="nav-item"><a class="nav-link" href="news.html" title="產業新聞">產業新聞</a></li>
-                    <li class="nav-item"><a class="nav-link" href="focus.html" title="精選廠商搶先報">精選廠商搶先報</a></li>
-                </ul>
+                        <div class="nav__tools">
+                            <a href="//www.facebook.com/taiwanwatershow/" title="Facebook"><img
+                                    src="./img/icon_facebook.png" /></a>
+                            <a href="//www.linkedin.com/company/31086045/admin/" title="Linkedin"><img
+                                    src="./img/icon_linkedin.png" /></a>
+                            <a href="//twitter.com/TaiwanWeek" title="Twitter"><img src="./img/icon_twitter.png" /></a>
+                        </div>
+                    </div>
+                    <div class="col-8 header__right">
+                        <div class="header__no">電子報 VOL.01</div>
+                        <div class="header__en"><a class="nav-link" href="index-en.html" title="English">English</a>
+                        </div>
+
+                        <!-- nav -->
+                        <ul class="header__nav nav">
+                            <li class="nav-item"><a class="nav-link"
+                                    href="//www.taiwanintlwaterweek.com/zh-tw/menu/1374A7912D94FD49D0636733C6861689/info.html"
+                                    title="各期電子報">各期電子報</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html" title="電子報首頁">電子報首頁</a></li>
+                            <li class="nav-item"><a class="nav-link" href="info.html" title="展覽訊息">展覽訊息</a></li>
+                            <li class="nav-item"><a class="nav-link" href="topic.html" title="專題報導">專題報導</a></li>
+                            <li class="nav-item"><a class="nav-link" href="news.html" title="產業新聞">產業新聞</a></li>
+                            <li class="nav-item"><a class="nav-link" href="focus.html" title="參展廠商搶先報">參展廠商搶先報</a></li>
+                        </ul>
+                    </div>
+                </dvi>
+
+
             </div>
         </header>
 
@@ -59,11 +65,15 @@
             <!-- kv -->
             <section class="kv"></section>
 
+        <!--main-->
+        <main>
             <!-- 內容 -->
-            <section class="content">
-                <div class="container">
+            <section class="container">
+                <div class="row justify-content-center">
+                    <div class="col-8">
+
                     <div class="content__theme">
-                        <img src="./img/bullet_trio_water.png" class="content__theme-img">
+                        <img src="./img/bullet_sub_cat.svg" class="content__theme-img">
                         <span>精選廠商搶先報</span>
                     </div>
 
@@ -162,14 +172,25 @@
         <footer class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="footer__title">主辦單位：</div>
-                    <a href="//www.twtc.com.tw/" class="footer__item" title="台北世界貿易中心"><img src="./img/twtc.png" /></a>
-                    <div class="footer__title">協辦單位：</div>
-                    <a href="//www.taitra.org.tw/" class="footer__item" title="中華民國對外貿易發展協會"><img
-                            src="./img/taitra.png" /></a>
+                    <div class="col-6">
+                        <div class="footer__title">主辦單位：
+                            <a href="//www.taitra.org.tw/" class="footer__item" title="中華民國對外貿易發展協會"><img
+                                    src="./img/logo_tetdc.svg" /></a>
+                        </div>
+                    </div>
+
+                    <div class="col-6">
+
+                        <div class="nav__tools">
+                            <a href="//www.facebook.com/taiwanwatershow/" title="Facebook"><img
+                                    src="./img/icon_facebook.png" /></a>
+                            <a href="//www.linkedin.com/company/31086045/admin/" title="Linkedin"><img
+                                    src="./img/icon_linkedin.png" /></a>
+                            <a href="//twitter.com/TaiwanWeek" title="Twitter"><img src="./img/icon_twitter.png" /></a>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="footer__bg"></div>
         </footer>
     </div>
 
