--- a/topic.html
+++ b/topic.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=992px, initial-scale=1">
 
-    <title>台灣國際水週 | 循環/再生/智慧水科技</title>
+    <title>台灣國際水週 | 運輸/淨水/水資源永續</title>
+
     <link rel="icon" type="image/png"
         href="https://storage.googleapis.com/www.taiwantradeshow.com.tw/ttsShow/202006/T-43764669.png" />
     <!-- css -->
     <link href="./css/all.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -20,121 +22,124 @@
         <!-- header -->
         <header class="header">
             <div class="container">
-                <!-- header__top -->
-                <div class="header__top">
-                    <h1 class="header__logo">
-                        <a href="index.html">
-                            <img src="./img/logo_tiww_h.png" alt="台灣國際水週" />
-                        </a>
-                    </h1>
-                    <div class="header__tools">
-                        <a href="//www.facebook.com/taiwanwatershow/" title="Facebook"><img
-                                src="./img/btn_fb.png" /></a>
-                        <a href="//twitter.com/TaiwanWeek" title="Twitter"><img src="./img/btn_twitter.png" /></a>
-                        <a href="//www.linkedin.com/company/31086045/admin/" title="Linkedin"><img
-                                src="./img/btn_linkedin.png" /></a>
-                        <a href="index-en.html" title="English" class="d-none"><img src="./img/btn_lan.png" /></a>
-                    </div>
-                </div>
+                <dvi class="row">
+                    <div class="col-4 header__left">
+                        <h1 class="header__logo">
+                            <a href="index.html">
+                                <img src="./img/tiww_logo.png" class="img-fluid" alt="台灣國際水週" />
+                            </a>
+                        </h1>
 
-                <!-- nav -->
-                <ul class="header__nav nav">
-                    <li class="nav-item"> 電子報 Vol. 01 </li>
-                    <li class="nav-item"><a class="nav-link" href="//www.taiwanintlwaterweek.com/" title="官網">官網</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link"
-                            href="//www.taiwanintlwaterweek.com/zh-tw/menu/1374A7912D94FD49D0636733C6861689/info.html"
-                            title="各期電子報">各期電子報</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html" title="首頁">首頁</a></li>
-                    <li class="nav-item"><a class="nav-link" href="info.html" title="展覽訊息">展覽訊息</a></li>
-                    <li class="nav-item"><a class="nav-link" href="topic.html" title="專題報導">專題報導</a></li>
-                    <li class="nav-item"><a class="nav-link" href="news.html" title="產業新聞">產業新聞</a></li>
-                    <li class="nav-item"><a class="nav-link" href="focus.html" title="精選廠商搶先報">精選廠商搶先報</a></li>
-                </ul>
+                        <div class="nav__tools">
+                            <a href="//www.facebook.com/taiwanwatershow/" title="Facebook"><img
+                                    src="./img/icon_facebook.png" /></a>
+                            <a href="//www.linkedin.com/company/31086045/admin/" title="Linkedin"><img
+                                    src="./img/icon_linkedin.png" /></a>
+                            <a href="//twitter.com/TaiwanWeek" title="Twitter"><img src="./img/icon_twitter.png" /></a>
+                        </div>
+                    </div>
+                    <div class="col-8 header__right">
+                        <div class="header__no">電子報 VOL.01</div>
+                        <div class="header__en"><a class="nav-link" href="index-en.html" title="English">English</a>
+                        </div>
+
+                        <!-- nav -->
+                        <ul class="header__nav nav">
+                            <li class="nav-item"><a class="nav-link"
+                                    href="//www.taiwanintlwaterweek.com/zh-tw/menu/1374A7912D94FD49D0636733C6861689/info.html"
+                                    title="各期電子報">各期電子報</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html" title="電子報首頁">電子報首頁</a></li>
+                            <li class="nav-item"><a class="nav-link" href="info.html" title="展覽訊息">展覽訊息</a></li>
+                            <li class="nav-item"><a class="nav-link" href="topic.html" title="專題報導">專題報導</a></li>
+                            <li class="nav-item"><a class="nav-link" href="news.html" title="產業新聞">產業新聞</a></li>
+                            <li class="nav-item"><a class="nav-link" href="focus.html" title="參展廠商搶先報">參展廠商搶先報</a></li>
+                        </ul>
+                    </div>
+                </dvi>
+
+
             </div>
         </header>
 
         <!--main-->
         <main>
-            <!-- kv -->
-            <section class="kv"></section>
-
-            <!-- 內容 -->
-            <section class="content">
-                <div class="container">
+             <!-- 內容 -->
+             <section class="container">
+                <div class="row justify-content-center">
+                    <div class="col-8">
                     <div class="content__theme">
-                        <img src="./img/bullet_trio_water.png" class="content__theme-img">
-                        <span>專題報導</span>
+                        <img src="./img/bullet_sub_cat.svg" class="content__theme-img">
+                        <span>產業新聞</span>
                     </div>
                     <div class="content__title">
-                        智慧科技與環境永續並進<br>
-                        TIWW 2022聚焦新時代「水」商機
-                    </div>
-
-                    <div class="content__text">
-                        <div class="content__subtitle-info">
-                            「水資源」面臨匱乏，「科技造水」是解方
-                        </div>
-
-                        <div class="photo float-right">
-                            <img src="./img/v1_topic_img_03.jpg" class="img-fluid">
-                        </div>
-
-                        <p>在所有自然資源中，水是人們賴以為生的重要資源，更是經濟發展的基礎，然而隨著氣候變遷、全球經濟發展加速，人民用水需求增加，看似源源不絕的水資源，正逐漸面臨匱乏危機。世界資源研究所(WRI)指出，全球近1/3人口生活在「高度缺水」的地區。如果此情形未獲改善，據聯合國(UN)預測，至2050年生活在缺水地區的人口比例將逾1/2。
-                        </p>
-
-                        <p>臺灣由於地狹人稠、降雨區域與時間不均及工業用水量急劇增加等原因，被聯合國列為世界第18位缺水國家，為解決水資源不足問題，如何有效利用雨水，地下水等天然水資源，甚至利用海水淡化、再生水等「科技造水」，以減少對天然水的依賴，已成為近年來最重要的課題。
-                        </p>
-                    </div>
-
-                    <div class="content__text">
-                        <div class="content__subtitle-info">
-                            參加「臺灣國際水週(TIWW)」，發掘環境永續新商機
-                        </div>
-
-                        <div class="photo float-left">
-                            <img src="./img/v1_topic_img_02.jpg" class="img-fluid">
-                        </div>
-
-                        <p>2022年「臺灣國際水週」是全臺唯一B2B國際專業水展，展出全臺最尖端、最完整的水資源產品、技術、科技和解決方案，協助參展商深耕國內市場，同時進軍國際，觸達目標買主，爭取商機。順應「水資源永續發展」的國際趨勢，本期電子報即以水再生循環及永續利用為主題，如何最小化水資源運輸過程中的浪費，及有效率地將生活雜排水系統化地再生及再利用，甚至將海水淡化為可供人類使用的寶貴水源，都是本次探討主軸。
-                        </p>
-
-                        <p>本期電子報將介紹該展「水循環與再生水處理區」和「輸送儲存與配件區」五家參展商，展現臺灣水資源運輸及處理優勢和特色，包含：積極發展數位水科技、減碳技術及循環經濟，協助台灣抗旱並致力追求「全球永續發展目標(SDGs)」的「工業技術研究院」；提供專業淨水廠和海水淡化廠代操作及維護、廢水回收再利用及大型移動式淨水處理設備統包工程的「<a
-                                href="#">環盟國際</a>」、專長提供工業用水、工業廢水、市政廢水、海水淡化、RO前過濾、雨水回收、地表水過濾等淨水技術和設備的「<a
-                                href="#">富爾特公司</a>」；專業研發無塞回頭式止回閥及球閥的「<a
-                                href="#">博洋工業</a>」，其特殊工業用閥被廣泛使用在半導體、石化、水道及造船產業；以及生產應用於各式流體靜態間隙密封圈和檢測設備的「<a
-                                href="#">漢升密封科技</a>」。
-                        </p>
+                        再生水資源發展條例修正三讀
                     </div>
 
 
                     <div class="content__text">
-                        <div class="content__subtitle-info">
-                            水循環再生，臺灣準備好了
+
+                        <div class="photo photo__caption float-left">
+                            <img src="./img/topic_img_01.jpg" class="img-fluid" />
+                            <span>每日可供應8000噸再生水給南部科學園區使用。</span>
                         </div>
 
-                        <div class="photo float-right">
-                            <img src="./img/v1_topic_img_01.jpg" class="img-fluid">
+                        <p>立法院今（29）日三讀通過「再生水資源發展條例部分條文修正案」，擴大再生水使用範圍，未來一定規模以上的開發行為，都要使用一定比率的再生水。經濟部水利署表示，再生水可降低水源供應風險及強化枯水期供水韌性，預期本次修法後，更能穩定產業及民生用水。
+                        </p>
+                        <p>新設開發案應使用一定比率再生水
+                            每三年檢討經歷百年大旱衝擊，政府加強推動再生水等多元水源，經濟部水利署今年初預告修正「再生水資源發展條例」部分條文，刪除「位在水源供應短缺之虞地區」才要使用再生水的條件，意即不論位在任何地區，一定規模以上的開發行為，都要使用一定比率的再生水，大幅擴大再生水使用範圍。
+                        </p>
+
+                        <div class="photo photo__caption float-right">
+                            <img src="./img/topic_img_02.jpg" class="img-fluid" />
+                            <span>台南市永康再生水廠第一期去年完工，每日可供應8000噸再生水給南部科學園區使用。(圖片來源：行政院提供)</span>
                         </div>
 
-                        <p>水資源再生與利用是當前最熱門的公共議題，公共污水處理廠的再生水源，來自民眾排出的生活污水，透過適當處理，即可讓污水再生。若以每人每日用水量250公升計算，每1萬噸的回收水或再生水使用，即可替換出4萬人用水，讓水資源可以循環利用，使「黑水」變「藍金」。
+                        <p>該草案經行政院3月通過後，立院經濟委員會於本月20日審查，委員會決議新增檢討機制，針對開發單位使用再生水之適用範圍、使用比率，或是對於「一定規模」定義等規範，由中央主管機關會商相關目的事業主管機關訂定，並且每三年檢討一次。
                         </p>
 
-                        <p>負責臺灣「公共污水處理廠再生水推動計畫」的營建署表示，自全國第一座大型再生水廠-高雄鳳山廠啟用營運後，臺灣水資源利用邁入一個嶄新的里程。此外，今年陸續將有臺南永康及高雄臨海再生水廠完工啟用，兩座新再生水廠的加入，象徵著再生水技術發展，已成臺灣產業未來重點發展方向。
+                        <p>立法院院會今日針對草案進行二讀逐條討論，但沒有立法委員提出異議，三讀程序也沒有任何文字修正，最終由立法院長游錫堃敲槌宣告三讀通過。</p>
+
+                        <p>水利署表示，後續將邀請相關目的事業主管機關及產業界等共同研商，依產業特性另訂子法。</p>
+
+                        <p>立法院院會今（29）日三讀通過「再生水資源發展條例部分條文修正案」。圖片來源：擷取自立法院議事轉播系統<br>
+                            再生水水源穩定可救旱 目標2031年11座再生水廠<br>
+                            水利署表示，再生水在去年百年大旱已成為產業的關鍵抗旱水源，可降低水源供應風險及強化枯水期供水韌性。「再生水資源發展條例部分條文修正案」三讀通過後，預期將擴大再生水使用範圍，減少對降水依賴，更穩定產業及民生用水。
                         </p>
+                        <div class="photo photo__caption float-left">
+                            <img src="./img/topic_img_03.jpg" class="img-fluid" />
+                            <span>台南市永康再生水廠第一期去年完工，每日可供應8000噸再生水給南部科學園區使用。(圖片來源：行政院提供)</span>
+                        </div>
+                        <p>水利署說明，再生水水源多來自生活污水，而「只要有用水就會有污水」，因此再生水的水源可說是相對穩定，具有保險用水特性。去年旱情，政府就部署了27台RO淨水設備，供應產業用水每日1萬3500噸，並以全國公共污水處理廠的放流水供應民生次級用水等，可見再生水對穩定產業發展的益處。
+                        </p>
+
+                        <p>水利署目前規劃11座再生水廠，除了已啟用的高雄鳳山、台南永康及高雄臨海再生水廠，還有桃園桃北、新竹竹北、台中豐原、台中水湳、台中福田、台南安平、台南仁德、高雄岡山等廠持續興建中，目標在2031年全數完工，預估可以增加每日28.9萬噸供水量。
+                        </p>
+
+                        <p>行政院長蘇貞昌昨（28）日赴台南永康再生水廠視察時表示，面對未來可能遭遇水資源缺乏，推動再生水工程是愛護水資源最實際的做法。未來將持續推動更多再生水工程，除處理污水外，提供比自來水品質更好的再生水，進而「化腐朽為神奇，變髒水為活水」。
+                        </p>
+
+                        <p>永康再生水廠目前供應給台南科技產業園區使用，蘇貞昌表示，未來科學園區在規劃時，應於周邊設置水資源循環中心，讓產業污水再循環運用。</p>
+
+                        <p>行政院長蘇貞昌昨（28）日表示，未來規劃科學園區時，周邊應設置水資源循環中心。<br>
+                            對於不斷成長的設廠需求，經濟部長王美花日前在立院表示，上述11座再生水廠只是初期的建設，未來會視需求擴充或新建，目標是在2031年公共污水處理廠每日供應77萬噸再生水。</p>
+
                     </div>
 
+                    <div class="content__other">
 
-                    <div class="content__slogan">想為臺灣水資源利用及永續發展出力？即刻報名加入「臺灣國際水週」，向全球產官學研專業人士，展出您的智慧解決方案吧！</div>
+                        <a href="#" class="content__link-news active" title="再生水資源發展條例修正三讀 新設開發案都要用再生水">
+                            再生水資源發展條例修正三讀 新設開發案都要用再生水
+                        </a>
 
+                        <a href="#" class="content__link-news" title="視察永康再生水廠  蘇揆：持續推動全國再生水工程 讓水資源循環再利用">
+                            視察永康再生水廠 蘇揆：持續推動全國再生水工程 讓水資源循環再利用
+                        </a>
 
-                    <a href="#" class="content__btn-register" title="點擊報名">
-                        點擊報名
-                    </a>
+                    </div>
+
 
                 </div>
             </section>
-
 
         </main>
 
@@ -142,17 +147,30 @@
         <footer class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="footer__title">主辦單位：</div>
-                    <a href="//www.twtc.com.tw/" class="footer__item" title="台北世界貿易中心"><img src="./img/twtc.png" /></a>
-                    <div class="footer__title">協辦單位：</div>
-                    <a href="//www.taitra.org.tw/" class="footer__item" title="中華民國對外貿易發展協會"><img
-                            src="./img/taitra.png" /></a>
+                    <div class="col-6">
+                        <div class="footer__title">主辦單位：
+                            <a href="//www.taitra.org.tw/" class="footer__item" title="中華民國對外貿易發展協會"><img
+                                    src="./img/logo_tetdc.svg" /></a>
+                        </div>
+                    </div>
+
+                    <div class="col-6">
+
+                        <div class="nav__tools">
+                            <a href="//www.facebook.com/taiwanwatershow/" title="Facebook"><img
+                                    src="./img/icon_facebook.png" /></a>
+                            <a href="//www.linkedin.com/company/31086045/admin/" title="Linkedin"><img
+                                    src="./img/icon_linkedin.png" /></a>
+                            <a href="//twitter.com/TaiwanWeek" title="Twitter"><img src="./img/icon_twitter.png" /></a>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="footer__bg"></div>
         </footer>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.7.0.slim.min.js" integrity="sha256-tG5mcZUtJsZvyKAxYLVXrmjKBVLd6VpVccqz/r4ypFE=" crossorigin="anonymous"></script>
+    <script src="js/base.js" > </script>
 </body>
 
 </html>
