--- a/news.html
+++ b/news.html
@@ -68,7 +68,7 @@
                     <div class="col-8">
                     <div class="content__theme">
                         <img src="./img/bullet_sub_cat.svg" class="content__theme-img">
-                        <span>產業新聞</span>
+                        <span>專題報導</span>
                     </div>
                     <div class="content__title">
                         再生水資源發展條例修正三讀<br>
