--- a/topic.html
+++ b/topic.html
@@ -69,7 +69,7 @@
                     <div class="col-8">
                     <div class="content__theme">
                         <img src="./img/bullet_sub_cat.svg" class="content__theme-img">
-                        <span>產業新聞</span>
+                        <span>專提報導</span>
                     </div>
                     <div class="content__title">
                         再生水資源發展條例修正三讀
@@ -125,7 +125,7 @@
 
                     </div>
 
-                    <div class="content__other">
+                    <!-- <div class="content__other">
 
                         <a href="#" class="content__link-news active" title="再生水資源發展條例修正三讀 新設開發案都要用再生水">
                             再生水資源發展條例修正三讀 新設開發案都要用再生水
@@ -135,7 +135,7 @@
                             視察永康再生水廠 蘇揆：持續推動全國再生水工程 讓水資源循環再利用
                         </a>
 
-                    </div>
+                    </div> -->
 
 
                 </div>
