--- a/topic.html
+++ b/topic.html
@@ -69,7 +69,7 @@
                     <div class="col-8">
                     <div class="content__theme">
                         <img src="./img/bullet_sub_cat.svg" class="content__theme-img">
-                        <span>專提報導</span>
+                        <span>專題報導</span>
                     </div>
                     <div class="content__title">
                         再生水資源發展條例修正三讀
