--- a/focus.html
+++ b/focus.html
@@ -86,7 +86,7 @@
                                     輸送儲存與配件區
                                 </div>
                                 <div class="company__logo">
-                                    <img src="./img/logo_avc.png" title="博洋工業股份有限公司" />
+                                    <img src="./img/em_ex_logo_03.jpg" title="博洋工業股份有限公司" />
                                 </div>
                             </div>
 
