--- a/news.html
+++ b/news.html
@@ -74,9 +74,9 @@
                         再生水資源發展條例修正三讀<br>
                         新設開發案都要用再生水
                     </div>
-                    <div class="content__source">
+                    <a href="#" class="content__source">
                         資料來源：環境資訊中心/記者 李蘇竣報導
-                    </div>
+                    </a>
 
                     <div class="content__text">
 
