--- a/topic.html
+++ b/topic.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="col-8 header__right">
                         <div class="header__no">電子報 VOL.01</div>
-                        <div class="header__en"><a  href="index-en.html" title="English">English</a>
+                        <div class="header__en"><a href="index-en.html" title="English">English</a>
                         </div>
 
                         <!-- nav -->
@@ -63,69 +63,69 @@
 
         <!--main-->
         <main>
-             <!-- 內容 -->
-             <section class="container">
+            <!-- 內容 -->
+            <section class="container">
                 <div class="row justify-content-center">
                     <div class="col-8">
-                    <div class="content__theme">
-                        <img src="./img/bullet_sub_cat.svg" class="content__theme-img">
-                        <span>專題報導</span>
-                    </div>
-                    <div class="content__title">
-                        再生水資源發展條例修正三讀
-                    </div>
-
-
-                    <div class="content__text">
-
-                        <div class="photo photo__caption float-left">
-                            <img src="./img/topic_img_01.jpg" class="img-fluid" />
-                            <span>每日可供應8000噸再生水給南部科學園區使用。</span>
+                        <div class="content__theme">
+                            <img src="./img/bullet_sub_cat.svg" class="content__theme-img">
+                            <span>專題報導</span>
+                        </div>
+                        <div class="content__title">
+                            再生水資源發展條例修正三讀
                         </div>
 
-                        <p>立法院今（29）日三讀通過「再生水資源發展條例部分條文修正案」，擴大再生水使用範圍，未來一定規模以上的開發行為，都要使用一定比率的再生水。經濟部水利署表示，再生水可降低水源供應風險及強化枯水期供水韌性，預期本次修法後，更能穩定產業及民生用水。
-                        </p>
-                        <p>新設開發案應使用一定比率再生水
-                            每三年檢討經歷百年大旱衝擊，政府加強推動再生水等多元水源，經濟部水利署今年初預告修正「再生水資源發展條例」部分條文，刪除「位在水源供應短缺之虞地區」才要使用再生水的條件，意即不論位在任何地區，一定規模以上的開發行為，都要使用一定比率的再生水，大幅擴大再生水使用範圍。
-                        </p>
 
-                        <div class="photo photo__caption float-right">
-                            <img src="./img/topic_img_02.jpg" class="img-fluid" />
-                            <span>台南市永康再生水廠第一期去年完工，每日可供應8000噸再生水給南部科學園區使用。(圖片來源：行政院提供)</span>
+                        <div class="content__text">
+
+                            <div class="photo photo__caption float-left">
+                                <img src="./img/topic_img_01.jpg" class="img-fluid" />
+                                <span>每日可供應8000噸再生水給南部科學園區使用。</span>
+                            </div>
+
+                            <p>立法院今（29）日三讀通過「再生水資源發展條例部分條文修正案」，擴大再生水使用範圍，未來一定規模以上的開發行為，都要使用一定比率的再生水。經濟部水利署表示，再生水可降低水源供應風險及強化枯水期供水韌性，預期本次修法後，更能穩定產業及民生用水。
+                            </p>
+                            <p>新設開發案應使用一定比率再生水
+                                每三年檢討經歷百年大旱衝擊，政府加強推動再生水等多元水源，經濟部水利署今年初預告修正「再生水資源發展條例」部分條文，刪除「位在水源供應短缺之虞地區」才要使用再生水的條件，意即不論位在任何地區，一定規模以上的開發行為，都要使用一定比率的再生水，大幅擴大再生水使用範圍。
+                            </p>
+
+                            <div class="photo photo__caption float-right">
+                                <img src="./img/topic_img_02.jpg" class="img-fluid" />
+                                <span>台南市永康再生水廠第一期去年完工，每日可供應8000噸再生水給南部科學園區使用。(圖片來源：行政院提供)</span>
+                            </div>
+
+                            <p>該草案經行政院3月通過後，立院經濟委員會於本月20日審查，委員會決議新增檢討機制，針對開發單位使用再生水之適用範圍、使用比率，或是對於「一定規模」定義等規範，由中央主管機關會商相關目的事業主管機關訂定，並且每三年檢討一次。
+                            </p>
+
+                            <p>立法院院會今日針對草案進行二讀逐條討論，但沒有立法委員提出異議，三讀程序也沒有任何文字修正，最終由立法院長游錫堃敲槌宣告三讀通過。</p>
+
+                            <p>水利署表示，後續將邀請相關目的事業主管機關及產業界等共同研商，依產業特性另訂子法。</p>
+
+                            <p>立法院院會今（29）日三讀通過「再生水資源發展條例部分條文修正案」。圖片來源：擷取自立法院議事轉播系統<br>
+                                再生水水源穩定可救旱 目標2031年11座再生水廠<br>
+                                水利署表示，再生水在去年百年大旱已成為產業的關鍵抗旱水源，可降低水源供應風險及強化枯水期供水韌性。「再生水資源發展條例部分條文修正案」三讀通過後，預期將擴大再生水使用範圍，減少對降水依賴，更穩定產業及民生用水。
+                            </p>
+                            <div class="photo photo__caption float-left">
+                                <img src="./img/topic_img_03.jpg" class="img-fluid" />
+                                <span>台南市永康再生水廠第一期去年完工，每日可供應8000噸再生水給南部科學園區使用。(圖片來源：行政院提供)</span>
+                            </div>
+                            <p>水利署說明，再生水水源多來自生活污水，而「只要有用水就會有污水」，因此再生水的水源可說是相對穩定，具有保險用水特性。去年旱情，政府就部署了27台RO淨水設備，供應產業用水每日1萬3500噸，並以全國公共污水處理廠的放流水供應民生次級用水等，可見再生水對穩定產業發展的益處。
+                            </p>
+
+                            <p>水利署目前規劃11座再生水廠，除了已啟用的高雄鳳山、台南永康及高雄臨海再生水廠，還有桃園桃北、新竹竹北、台中豐原、台中水湳、台中福田、台南安平、台南仁德、高雄岡山等廠持續興建中，目標在2031年全數完工，預估可以增加每日28.9萬噸供水量。
+                            </p>
+
+                            <p>行政院長蘇貞昌昨（28）日赴台南永康再生水廠視察時表示，面對未來可能遭遇水資源缺乏，推動再生水工程是愛護水資源最實際的做法。未來將持續推動更多再生水工程，除處理污水外，提供比自來水品質更好的再生水，進而「化腐朽為神奇，變髒水為活水」。
+                            </p>
+
+                            <p>永康再生水廠目前供應給台南科技產業園區使用，蘇貞昌表示，未來科學園區在規劃時，應於周邊設置水資源循環中心，讓產業污水再循環運用。</p>
+
+                            <p>行政院長蘇貞昌昨（28）日表示，未來規劃科學園區時，周邊應設置水資源循環中心。<br>
+                                對於不斷成長的設廠需求，經濟部長王美花日前在立院表示，上述11座再生水廠只是初期的建設，未來會視需求擴充或新建，目標是在2031年公共污水處理廠每日供應77萬噸再生水。</p>
+
                         </div>
 
-                        <p>該草案經行政院3月通過後，立院經濟委員會於本月20日審查，委員會決議新增檢討機制，針對開發單位使用再生水之適用範圍、使用比率，或是對於「一定規模」定義等規範，由中央主管機關會商相關目的事業主管機關訂定，並且每三年檢討一次。
-                        </p>
-
-                        <p>立法院院會今日針對草案進行二讀逐條討論，但沒有立法委員提出異議，三讀程序也沒有任何文字修正，最終由立法院長游錫堃敲槌宣告三讀通過。</p>
-
-                        <p>水利署表示，後續將邀請相關目的事業主管機關及產業界等共同研商，依產業特性另訂子法。</p>
-
-                        <p>立法院院會今（29）日三讀通過「再生水資源發展條例部分條文修正案」。圖片來源：擷取自立法院議事轉播系統<br>
-                            再生水水源穩定可救旱 目標2031年11座再生水廠<br>
-                            水利署表示，再生水在去年百年大旱已成為產業的關鍵抗旱水源，可降低水源供應風險及強化枯水期供水韌性。「再生水資源發展條例部分條文修正案」三讀通過後，預期將擴大再生水使用範圍，減少對降水依賴，更穩定產業及民生用水。
-                        </p>
-                        <div class="photo photo__caption float-left">
-                            <img src="./img/topic_img_03.jpg" class="img-fluid" />
-                            <span>台南市永康再生水廠第一期去年完工，每日可供應8000噸再生水給南部科學園區使用。(圖片來源：行政院提供)</span>
-                        </div>
-                        <p>水利署說明，再生水水源多來自生活污水，而「只要有用水就會有污水」，因此再生水的水源可說是相對穩定，具有保險用水特性。去年旱情，政府就部署了27台RO淨水設備，供應產業用水每日1萬3500噸，並以全國公共污水處理廠的放流水供應民生次級用水等，可見再生水對穩定產業發展的益處。
-                        </p>
-
-                        <p>水利署目前規劃11座再生水廠，除了已啟用的高雄鳳山、台南永康及高雄臨海再生水廠，還有桃園桃北、新竹竹北、台中豐原、台中水湳、台中福田、台南安平、台南仁德、高雄岡山等廠持續興建中，目標在2031年全數完工，預估可以增加每日28.9萬噸供水量。
-                        </p>
-
-                        <p>行政院長蘇貞昌昨（28）日赴台南永康再生水廠視察時表示，面對未來可能遭遇水資源缺乏，推動再生水工程是愛護水資源最實際的做法。未來將持續推動更多再生水工程，除處理污水外，提供比自來水品質更好的再生水，進而「化腐朽為神奇，變髒水為活水」。
-                        </p>
-
-                        <p>永康再生水廠目前供應給台南科技產業園區使用，蘇貞昌表示，未來科學園區在規劃時，應於周邊設置水資源循環中心，讓產業污水再循環運用。</p>
-
-                        <p>行政院長蘇貞昌昨（28）日表示，未來規劃科學園區時，周邊應設置水資源循環中心。<br>
-                            對於不斷成長的設廠需求，經濟部長王美花日前在立院表示，上述11座再生水廠只是初期的建設，未來會視需求擴充或新建，目標是在2031年公共污水處理廠每日供應77萬噸再生水。</p>
-
-                    </div>
-
-                    <!-- <div class="content__other">
+                        <!-- <div class="content__other">
 
                         <a href="#" class="content__link-news active" title="再生水資源發展條例修正三讀 新設開發案都要用再生水">
                             再生水資源發展條例修正三讀 新設開發案都要用再生水
@@ -138,7 +138,7 @@
                     </div> -->
 
 
-                </div>
+                    </div>
             </section>
 
         </main>
@@ -169,8 +169,8 @@
         </footer>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.7.0.slim.min.js" integrity="sha256-tG5mcZUtJsZvyKAxYLVXrmjKBVLd6VpVccqz/r4ypFE=" crossorigin="anonymous"></script>
-    <script src="js/base.js" > </script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/base.js"> </script>
 </body>
 
 </html>
